--- a/app/index.tpl.html
+++ b/app/index.tpl.html
@@ -7,9 +7,11 @@
     <title>React Redux React-Router with Webpack Boilerplate</title>
     <meta name="description" content="React Redux React-Router with Webpack Boilerplate">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link type="stylesheet" href="./styles/main.css">
 </head>
 
 <body class="view-login">
+    <div class="topbar"></div>
     <div id="root"></div>
 </body>
 
